--- a/docs/notebooks/T1/5Structure_Lineaire-Pile-Nathanael.ipynb
+++ b/docs/notebooks/T1/5Structure_Lineaire-Pile-Nathanael.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,47 @@
     "\n",
     "    def empiler(self,x):\n",
     "        '''empile'''\n",
-    "        self.L.append(x)"
+    "        self.L.append(x)\n",
+    "\n",
+    "    def inverser(self):\n",
+    "        copie = Pile()\n",
+    "        for i in range(len(self.L)):\n",
+    "            copie.empiler(self.L[i])\n",
+    "        for i in range(len(copie.L)):\n",
+    "            self.L[i] = copie.L[-i-1]\n",
+    "        return self.L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[8, 6, 4, 2, 0]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Pile()\n",
+    "for i in range(5) :\n",
+    "    p.empiler(2*i)\n",
+    "\n",
+    "print(p.L)\n",
+    "p.inverser()"
    ]
   },
   {
@@ -596,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,21 +646,21 @@
     "        binaire.empiler(n%2)\n",
     "        n = n//2\n",
     "    binaire.empiler(n%2)\n",
-    "    return binaire.L"
+    "    return binaire.inverser()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 1, 0, 1, 1, 0, 1]"
+       "[1, 0, 1, 1, 0, 1, 1]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,14 +680,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "def baseConverter(n, b):\n",
-    "    convert = Pile()\n",
+    "    basepile = Pile()\n",
     "    while n//b != 0:\n",
-    "        convert.empiler(n%b)\n",
+    "        basepile.empiler(n%b)\n",
     "        b = n//b\n",
     "    convert.empiler(n%b)\n",
     "    return convert.L"
@@ -655,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -665,8 +705,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [68], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m baseConverter(\u001b[39m91\u001b[39m, \u001b[39m2\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [67], line 3\u001b[0m, in \u001b[0;36mbaseConverter\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mbaseConverter\u001b[39m(n, b):\n\u001b[1;32m      2\u001b[0m     convert \u001b[39m=\u001b[39m Pile()\n\u001b[0;32m----> 3\u001b[0m     \u001b[39mwhile\u001b[39;00m n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      4\u001b[0m         convert\u001b[39m.\u001b[39mempiler(n\u001b[39m%\u001b[39mb)\n\u001b[1;32m      5\u001b[0m         b \u001b[39m=\u001b[39m n\u001b[39m/\u001b[39m\u001b[39m/\u001b[39mb\n",
+      "Cell \u001b[0;32mIn [85], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m baseConverter(\u001b[39m91\u001b[39m, \u001b[39m2\u001b[39m)\n",
+      "Cell \u001b[0;32mIn [84], line 3\u001b[0m, in \u001b[0;36mbaseConverter\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mbaseConverter\u001b[39m(n, b):\n\u001b[1;32m      2\u001b[0m     basepile \u001b[39m=\u001b[39m Pile()\n\u001b[0;32m----> 3\u001b[0m     \u001b[39mwhile\u001b[39;00m n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb \u001b[39m!=\u001b[39;49m \u001b[39m0\u001b[39;49m:\n\u001b[1;32m      4\u001b[0m         basepile\u001b[39m.\u001b[39mempiler(n\u001b[39m%\u001b[39mb)\n\u001b[1;32m      5\u001b[0m         b \u001b[39m=\u001b[39m n\u001b[39m/\u001b[39m\u001b[39m/\u001b[39mb\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
