--- a/docs/notebooks/T1/5Structure_Lineaire-Pile-Nathanael.ipynb
+++ b/docs/notebooks/T1/5Structure_Lineaire-Pile-Nathanael.ipynb
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,31 +688,29 @@
     "    basepile = Pile()\n",
     "    while n//b != 0:\n",
     "        basepile.empiler(n%b)\n",
-    "        b = n//b\n",
-    "    convert.empiler(n%b)\n",
-    "    return convert.L"
+    "        n = n//b\n",
+    "    basepile.empiler(n%b)\n",
+    "    return basepile.inverser()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [85], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m baseConverter(\u001b[39m91\u001b[39m, \u001b[39m2\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [84], line 3\u001b[0m, in \u001b[0;36mbaseConverter\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mbaseConverter\u001b[39m(n, b):\n\u001b[1;32m      2\u001b[0m     basepile \u001b[39m=\u001b[39m Pile()\n\u001b[0;32m----> 3\u001b[0m     \u001b[39mwhile\u001b[39;00m n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb \u001b[39m!=\u001b[39;49m \u001b[39m0\u001b[39;49m:\n\u001b[1;32m      4\u001b[0m         basepile\u001b[39m.\u001b[39mempiler(n\u001b[39m%\u001b[39mb)\n\u001b[1;32m      5\u001b[0m         b \u001b[39m=\u001b[39m n\u001b[39m/\u001b[39m\u001b[39m/\u001b[39mb\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "[11, 11, 2, 7, 8]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "baseConverter(91, 2)"
+    "baseConverter(766584, 16)"
    ]
   },
   {
