--- a/docs/notebooks/T1/5Structure_Lineaire-Pile-Nathanael.ipynb
+++ b/docs/notebooks/T1/5Structure_Lineaire-Pile-Nathanael.ipynb
@@ -502,21 +502,23 @@
     "\n",
     "Écrire en pseudo code l’algorithme\n",
     "\n",
-    "a = Pile()\n",
+    "definir verification(expression):\n",
     "\n",
-    "pour i dans a:\n",
+    "    a = Pile()\n",
     "\n",
-    "    si i == \")\":\n",
+    "    pour i dans expression:\n",
     "\n",
-    "        empiler(i)\n",
+    "        si i == \"(\":\n",
     "\n",
-    "    si i == \"(\":\n",
+    "            a.empiler(i)\n",
     "\n",
-    "        assert not vide(a.L), \"Faux\"\n",
+    "        si i == \")\":\n",
     "\n",
-    "        depiler(a.L)\n",
+    "            vérifier que a n'est pas vide, \"Faux\"\n",
+    "\n",
+    "            a.depiler()\n",
     "        \n",
-    "vide(a.L)\n",
+    "    retourner a.vide()\n",
     "\n",
     "<h3 class='fa fa-cog' style=\"color: MediumSeaGreen\"> A faire vous même n°6 :</h3>\n",
     "\n",
