--- a/docs/notebooks/T1/6Structure_Lineaire-File-Nathanael.ipynb.ipynb
+++ b/docs/notebooks/T1/6Structure_Lineaire-File-Nathanael.ipynb.ipynb
@@ -38,6 +38,7 @@
     "\n",
     "Essayer de résoudre le tri à la page suivante : https://alainbusser.frama.io/NSI-IREMI-974/queuesortable.html\n",
     "\n",
+    "Réussi\n",
     "\n",
     "# TAD d'une file :\n",
     "\n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,10 +108,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f=file()\n",
+    "for i in range(5):\n",
+    "    enfiler(f,2*i)\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=defiler(f)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vide(f))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,20 +181,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def taille(f) :"
+    "def taille(f) :\n",
+    "    return len(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f=file()\n",
+    "for i in range(5):\n",
+    "    enfiler(f,2*i)\n",
+    "print(f)\n",
+    "taille(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sommet(f) :"
+    "def sommet(f) :\n",
+    "    assert not vide(f), \"La file est vide\"\n",
+    "    return (f[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f=file()\n",
+    "for i in range(5):\n",
+    "    enfiler(f,2*i)\n",
+    "print(f)\n",
+    "sommet(f)"
    ]
   },
   {
@@ -154,30 +277,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "class File :\n",
-    "    \n",
-    "'''classe File création d’une instance File avec une liste'''\n",
     "\n",
-    "def __init__(self):\n",
-    "    '''Initialisation d’une pile vide'''\n",
-    "    ...\n",
-    "    \n",
-    "def vide(self):\n",
-    "    '''teste si la pile est vide'''\n",
-    "    ...\n",
+    "    '''classe File création d’une instance File avec une liste'''\n",
     "\n",
-    "def defiler(self):\n",
-    "    '''défile'''\n",
-    "    ...\n",
-    "    ...\n",
+    "    def __init__(self):\n",
+    "        '''Initialisation d’une file vide'''\n",
+    "        self.F = []\n",
+    "        \n",
+    "    def vide(self):\n",
+    "        '''teste si la file est vide'''\n",
+    "        return self.F == []\n",
     "\n",
-    "def enfiler(self,x):\n",
-    "    '''enfile'''\n",
-    "    ..."
+    "    def defiler(self):\n",
+    "        '''défile'''\n",
+    "        assert not self.vide(), \"File vide\"\n",
+    "        return self.F.pop(0)\n",
+    "\n",
+    "    def enfiler(self,x):\n",
+    "        '''enfile'''\n",
+    "        self.F.append(x)"
    ]
   },
   {
@@ -195,10 +318,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = File()\n",
+    "for i in range(5) :\n",
+    "    f.enfiler(2*i)\n",
+    "print(f.F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "a = f.defiler()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f.F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f.vide())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,10 +400,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def taille(self):\n",
+    "    return len(self.F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = File()\n",
+    "for i in range(5) :\n",
+    "    f.enfiler(2*i)\n",
+    "print(f.F)\n",
+    "taille(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sommet(self):\n",
+    "    assert not self.vide(), \"File vide\"\n",
+    "    return self.F[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = File()\n",
+    "for i in range(5) :\n",
+    "    f.enfiler(2*i)\n",
+    "print(f.F)\n",
+    "sommet(f)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -364,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
