--- a/docs/notebooks/T1/6Structure_Lineaire-File-Nathanael.ipynb.ipynb
+++ b/docs/notebooks/T1/6Structure_Lineaire-File-Nathanael.ipynb.ipynb
@@ -500,35 +500,36 @@
     "- On n’utilisera que les méthodes enfiler, defiler, sommet et vide ;\n",
     "- On testera l’algorithme sur f1 : tête <–[0, 1, 1, 0, 1]<– queue ;\n",
     "- On testera l’algorithme sur f2 : tête <–[0, 2, 2, 2, 0, 2, 0]<– queue ;\n",
-    "- Le résultat attendu est alors : f3 tête <–[0, 1, 1, 2, 1, 2, 2, 0, 2, 0]<– queue.\n",
-    "\n",
+    "- Le résultat attendu est alors : f3 tête <–[0, 1, 1, 2, 1, 2, 2, 0, 2, 0]<– queue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h3 class='fa fa-cog' style=\"color: MediumSeaGreen\"> A faire vous même n°6 :</h3>\n",
     "\n",
     "- Q1) Que doit faire l’algorithme si les deux sommets des files sont à 0 ?\n",
     "\n",
-    "...\n",
+    "Defiler les deux sommets\n",
     "\n",
     "- Q2) Que doit faire l’algorithme si le sommet de f1 est à 1 et celui de f2 à 2 ?\n",
     "\n",
-    "...\n",
+    "Defiler le sommet de la file f1\n",
     "\n",
     "- Q3) Que doit faire l’algorithme si le sommet de f1 est à 1 et celui de f2 à 0 ?\n",
     "\n",
-    "...\n",
+    "Defiler le sommet de la file f1\n",
     "\n",
     "- Q4) Que doit faire l’algorithme si le sommet de f1 est à 0 et celui de f2 à 2 ?\n",
     "\n",
-    "...\n",
+    "Defiler les deux sommets\n",
     "\n",
     "- Q5) Que doit faire l’algorithme si l’une des deux files est vide ?\n",
     "\n",
+    "Terminer de Defiler celle qui ne l'est pas\n",
     "\n",
-    "...\n",
-    "\n",
-    "\n",
-    "- Q6) Écrire un algorithme qui modélise ce carrefour, on utilisera une fonction croisement(f1,f2) qui prend en paramètres deux files f1 et f2 et qui retourne une file f3 contenant la file f3 des voitures sur la route R3\n",
-    "\n",
-    "..."
+    "- Q6) Écrire un algorithme qui modélise ce carrefour, on utilisera une fonction croisement(f1,f2) qui prend en paramètres deux files f1 et f2 et qui retourne une file f3 contenant la file f3 des voitures sur la route R3"
    ]
   },
   {
