--- a/docs/notebooks/T1/6Structure_Lineaire-File-Nathanael.ipynb.ipynb
+++ b/docs/notebooks/T1/6Structure_Lineaire-File-Nathanael.ipynb.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,38 +567,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "[0, 1, 1, 0, 1]\n"
+      "[0, 1, 1, 2, 1, 2, 2, 0, 2, 0]\n"
      ]
     }
    ],
    "source": [
     "for i in range(taille(f1)):\n",
-    "    f3.enfiler(f1.defiler())\n",
-    "print(f1.F)\n",
-    "print(f3.F)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "while taille(f1) != 0:\n",
     "    if sommet(f1) == 1:\n",
     "        f3.enfiler(f1.defiler())\n",
-    "    elif sommet(f1) == 0 and not f2.vide():\n",
+    "    elif sommet(f1) == 0:\n",
     "        f3.enfiler(f2.defiler())\n",
-    "        f1.defiler\n",
-    "if not vide(f2):\n",
+    "        f1.defiler()\n",
+    "if not f2.vide():\n",
     "    for i in range(taille(f2)):\n",
     "        f3.enfiler(f2.defiler())\n",
     "\n",
@@ -617,10 +604,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f = File()\n",
+    "for i in range(5) :\n",
+    "    f.enfiler(2*i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[8, 6, 4, 2, 0]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def inverse(f):\n",
+    "    nouvelle_file = File()\n",
+    "    for i in range(taille(f)):\n",
+    "        nouvelle_file.enfiler(f.F[-i-1])\n",
+    "    return nouvelle_file.F\n",
+    "\n",
+    "print(f.F)\n",
+    "inverse(f)"
+   ]
   },
   {
    "cell_type": "markdown",
