--- a/docs/notebooks/T1/7Recursif-Nathanael.ipynb
+++ b/docs/notebooks/T1/7Recursif-Nathanael.ipynb
@@ -104,18 +104,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert somme([2,12,1,8,5,10,20]) == 58, \"Test non concluant !\"\n",
+    "def somme_1(liste):\n",
+    "    s = 0\n",
+    "    for i in range(len(liste)):\n",
+    "        s += liste[i]\n",
+    "    return s\n",
+    "\n",
+    "def somme_2(liste):\n",
+    "    s = 0\n",
+    "    for element in liste:\n",
+    "        s += element\n",
+    "    return s\n",
+    "\n",
+    "def somme_3(liste):\n",
+    "    s = 0\n",
+    "    i = 0\n",
+    "    while i < len(liste):\n",
+    "        s += liste[i]\n",
+    "        i += 1\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test concluant !\n"
+     ]
+    }
+   ],
+   "source": [
+    "assert somme_1([2,12,1,8,5,10,20]) == 58, \"Test non concluant !\"\n",
+    "print(\"Test concluant !\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test concluant !\n"
+     ]
+    }
+   ],
+   "source": [
+    "assert somme_2([2,12,1,8,5,10,20]) == 58, \"Test non concluant !\"\n",
+    "print(\"Test concluant !\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test concluant !\n"
+     ]
+    }
+   ],
+   "source": [
+    "assert somme_3([2,12,1,8,5,10,20]) == 58, \"Test non concluant !\"\n",
     "print(\"Test concluant !\")"
    ]
   },
@@ -157,16 +221,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sommeliste(liste):\n",
+    "    if len(liste) == 1:\n",
+    "        return liste[0]\n",
+    "    else:\n",
+    "        return liste[0] + sommeliste(liste[1:])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test concluant !\n"
+     ]
+    }
+   ],
    "source": [
     "assert sommeliste([2,12,1,8,5,10,20]) == 58, \"Test non concluant\"\n",
     "print(\"Test concluant !\")"
@@ -186,15 +264,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50100\n",
+      "0.0069607389996235725\n",
+      "50100\n",
+      "0.00011191999874426983\n"
+     ]
+    }
+   ],
    "source": [
     "from timeit import default_timer as timer\n",
     "from random import randint\n",
     "\n",
     "# Ajouter les codes des deux fonctions à comparer ici\n",
     "\n",
+    "def somme(liste):\n",
+    "    s = 0\n",
+    "    for element in liste:\n",
+    "        s += element\n",
+    "    return s\n",
+    "\n",
+    "def sommeliste(liste):\n",
+    "    if len(liste) == 1:\n",
+    "        return liste[0]\n",
+    "    else:\n",
+    "        return liste[0] + sommeliste(liste[1:])\n",
     "\n",
     "\n",
     "L=[randint(0,100) for i in range(1000)]\n",
@@ -215,7 +315,7 @@
    "source": [
     "- Que pouvez-vous en conclure (pour cet exemple)?\n",
     "\n",
-    "..."
+    "D'après cet exemple, nous pouvons constater que la version récursive du programme sommeliste est plus rapide que sa version itérative."
    ]
   },
   {
@@ -229,13 +329,75 @@
     "- Observer le fonctionnement des appels récursifs de la fonction `sommeliste(liste)` dans votre programme avec l'outil [Python tutor](http://pythontutor.com/) permet de visualiser pas à pas ce que fait votre script.\n",
     "\n",
     "> Il est possible de l'utiliser dans un notebook jupyter pour celà il faut :\n",
-    "    > 1. l'installer (si ce n'est pas déjà fait) : ``%pip install metakernel``\n",
-    "    > 1. puis exécuter les instructions de la cellule suivante :"
+    "    > 1. l'installer (si ce n'est pas déjà fait) : ``%pip install metakernel``"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting metakernel\n",
+      "  Downloading metakernel-0.29.2-py3-none-any.whl (217 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m217.1/217.1 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: jedi>=0.18 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from metakernel) (0.18.1)\n",
+      "Requirement already satisfied: pexpect>=4.8 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from metakernel) (4.8.0)\n",
+      "Requirement already satisfied: jupyter-core>=4.9.2 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from metakernel) (4.11.1)\n",
+      "Requirement already satisfied: ipykernel>=5.5.6 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from metakernel) (6.16.0)\n",
+      "Requirement already satisfied: matplotlib-inline>=0.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipykernel>=5.5.6->metakernel) (0.1.6)\n",
+      "Requirement already satisfied: nest-asyncio in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipykernel>=5.5.6->metakernel) (1.5.6)\n",
+      "Requirement already satisfied: jupyter-client>=6.1.12 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipykernel>=5.5.6->metakernel) (7.3.5)\n",
+      "Requirement already satisfied: packaging in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipykernel>=5.5.6->metakernel) (21.3)\n",
+      "Requirement already satisfied: pyzmq>=17 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipykernel>=5.5.6->metakernel) (24.0.1)\n",
+      "Requirement already satisfied: psutil in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipykernel>=5.5.6->metakernel) (5.9.2)\n",
+      "Requirement already satisfied: traitlets>=5.1.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipykernel>=5.5.6->metakernel) (5.4.0)\n",
+      "Requirement already satisfied: ipython>=7.23.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipykernel>=5.5.6->metakernel) (8.5.0)\n",
+      "Requirement already satisfied: debugpy>=1.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipykernel>=5.5.6->metakernel) (1.6.3)\n",
+      "Requirement already satisfied: tornado>=6.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipykernel>=5.5.6->metakernel) (6.2)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from jedi>=0.18->metakernel) (0.8.3)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from pexpect>=4.8->metakernel) (0.7.0)\n",
+      "Requirement already satisfied: backcall in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipython>=7.23.1->ipykernel>=5.5.6->metakernel) (0.2.0)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipython>=7.23.1->ipykernel>=5.5.6->metakernel) (2.13.0)\n",
+      "Requirement already satisfied: decorator in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipython>=7.23.1->ipykernel>=5.5.6->metakernel) (5.1.1)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>3.0.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipython>=7.23.1->ipykernel>=5.5.6->metakernel) (3.0.31)\n",
+      "Requirement already satisfied: pickleshare in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipython>=7.23.1->ipykernel>=5.5.6->metakernel) (0.7.5)\n",
+      "Requirement already satisfied: stack-data in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from ipython>=7.23.1->ipykernel>=5.5.6->metakernel) (0.5.1)\n",
+      "Requirement already satisfied: entrypoints in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from jupyter-client>=6.1.12->ipykernel>=5.5.6->metakernel) (0.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from jupyter-client>=6.1.12->ipykernel>=5.5.6->metakernel) (2.8.2)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from packaging->ipykernel>=5.5.6->metakernel) (3.0.9)\n",
+      "Requirement already satisfied: wcwidth in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from prompt-toolkit<3.1.0,>3.0.1->ipython>=7.23.1->ipykernel>=5.5.6->metakernel) (0.2.5)\n",
+      "Requirement already satisfied: six>=1.5 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from python-dateutil>=2.8.2->jupyter-client>=6.1.12->ipykernel>=5.5.6->metakernel) (1.16.0)\n",
+      "Requirement already satisfied: pure-eval in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stack-data->ipython>=7.23.1->ipykernel>=5.5.6->metakernel) (0.2.2)\n",
+      "Requirement already satisfied: executing in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stack-data->ipython>=7.23.1->ipykernel>=5.5.6->metakernel) (1.1.0)\n",
+      "Requirement already satisfied: asttokens in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stack-data->ipython>=7.23.1->ipykernel>=5.5.6->metakernel) (2.0.8)\n",
+      "Installing collected packages: metakernel\n",
+      "Successfully installed metakernel-0.29.2\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.2.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m22.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install metakernel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">\n",
+    "    > 2. puis exécuter les instructions de la cellule suivante :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,15 +415,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"500\"\n",
+       "            src=\"https://pythontutor.com/iframe-embed.html#code=%23%20Script%20%C3%A0%20tester%20%3A%0Adef%20sommeliste%28liste%29%3A%0A%20%20%20%20if%20len%28liste%29%20%3D%3D%201%3A%0A%20%20%20%20%20%20%20%20return%20liste%5B0%5D%0A%20%20%20%20else%3A%0A%20%20%20%20%20%20%20%20return%20liste%5B0%5D%20%2B%20sommeliste%28liste%5B1%3A%5D%29%0A%0Aprint%28sommeliste%28%5B2%2C12%2C1%2C8%2C5%2C10%2C20%5D%29%29%0A&origin=opt-frontend.js&cumulative=false&heapPrimitives=false&textReferences=false&py=3&rawInputLstJSON=%5B%5D&curInstr=0&codeDivWidth=350&codeDivHeight=400\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fede81b7d90>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%tutor\n",
     "# Script à tester :\n",
-    "\n",
-    "# Ajouter le code de votre fonction sommeliste(liste) ici\n",
-    "\n",
+    "def sommeliste(liste):\n",
+    "    if len(liste) == 1:\n",
+    "        return liste[0]\n",
+    "    else:\n",
+    "        return liste[0] + sommeliste(liste[1:])\n",
     "\n",
     "print(sommeliste([2,12,1,8,5,10,20]))"
    ]
@@ -351,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,10 +574,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1001101\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'1001101'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(bin(77)[2:])\n",
+    "decTob(77, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "115\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'115'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(oct(77)[2:])\n",
+    "decTob(77, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4d\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'4D'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(hex(77)[2:])\n",
+    "decTob(77, 16)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -421,17 +684,55 @@
     "Q1) Dans notre cas quel est \"l’état trivial\" ?\n",
     "\n",
     "\n",
-    "...\n",
+    "Il s’agit de : si n est égal à 0 alors on renvoie le mot.\n",
     "\n",
     "Q2) Expliquer ce qui va conduire à cet \"état trivial\" ?\n",
     "\n",
-    "...\n",
-    "\n",
-    "...\n",
-    "\n",
-    "...\n",
+    "A chaque fois que la fonction est executée, n est réduit jusqu'à atteindre 0.\n",
     "\n",
     "- Réaliser une version récursive du programme précédent :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decTob_recursive(n, b):\n",
+    "    assert (b > 1 and b < 17) , \"b doit être compris entre 2 et 16\"\n",
+    "    signes = [\"0\",\"1\",\"2\",\"3\",\"4\",\"5\",\"6\",\"7\",\"8\",\"9\",\"A\",\"B\",\"C\",\"D\",\"E\",\"F\"]\n",
+    "    mot = \"\"\n",
+    "    if n == 0:\n",
+    "        return mot\n",
+    "    else:\n",
+    "        mot = signes[n % b] + decTob_recursive(n//b, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"NoneType\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [37], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m decTob(\u001b[39m77\u001b[39m, \u001b[39m2\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m decTob_iterative(\u001b[39m77\u001b[39m, \u001b[39m2\u001b[39m)\n",
+      "Cell \u001b[0;32mIn [34], line 8\u001b[0m, in \u001b[0;36mdecTob_iterative\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m mot\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     mot \u001b[39m=\u001b[39m signes[n \u001b[39m%\u001b[39m b] \u001b[39m+\u001b[39m decTob_iterative(n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb, b)\n",
+      "Cell \u001b[0;32mIn [34], line 8\u001b[0m, in \u001b[0;36mdecTob_iterative\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m mot\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     mot \u001b[39m=\u001b[39m signes[n \u001b[39m%\u001b[39m b] \u001b[39m+\u001b[39m decTob_iterative(n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb, b)\n",
+      "    \u001b[0;31m[... skipping similar frames: decTob_iterative at line 8 (3 times)]\u001b[0m\n",
+      "Cell \u001b[0;32mIn [34], line 8\u001b[0m, in \u001b[0;36mdecTob_iterative\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m mot\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     mot \u001b[39m=\u001b[39m signes[n \u001b[39m%\u001b[39;49m b] \u001b[39m+\u001b[39;49m decTob_iterative(n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb, b)\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"NoneType\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "decTob(77, 2)\n",
+    "decTob_iterative(77, 2)"
    ]
   },
   {
@@ -439,7 +740,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "decTob(77, 8)\n",
+    "decTob_iterative(77, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decTob(77, 16)\n",
+    "decTob_iterative(77, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -535,7 +849,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
