--- a/docs/notebooks/T1/7Recursif-Nathanael.ipynb
+++ b/docs/notebooks/T1/7Recursif-Nathanael.ipynb
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,14 +706,21 @@
     "    if n == 0:\n",
     "        return mot\n",
     "    else:\n",
-    "        mot = signes[n % b] + decTob_recursive(n//b, b)"
+    "        mot = signes[n % b] + decTob_recursive(n//b, b) + mot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1001101\n"
+     ]
+    },
     {
      "ename": "TypeError",
      "evalue": "can only concatenate str (not \"NoneType\") to str",
@@ -721,18 +728,18 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [37], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m decTob(\u001b[39m77\u001b[39m, \u001b[39m2\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m decTob_iterative(\u001b[39m77\u001b[39m, \u001b[39m2\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [34], line 8\u001b[0m, in \u001b[0;36mdecTob_iterative\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m mot\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     mot \u001b[39m=\u001b[39m signes[n \u001b[39m%\u001b[39m b] \u001b[39m+\u001b[39m decTob_iterative(n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb, b)\n",
-      "Cell \u001b[0;32mIn [34], line 8\u001b[0m, in \u001b[0;36mdecTob_iterative\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m mot\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     mot \u001b[39m=\u001b[39m signes[n \u001b[39m%\u001b[39m b] \u001b[39m+\u001b[39m decTob_iterative(n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb, b)\n",
-      "    \u001b[0;31m[... skipping similar frames: decTob_iterative at line 8 (3 times)]\u001b[0m\n",
-      "Cell \u001b[0;32mIn [34], line 8\u001b[0m, in \u001b[0;36mdecTob_iterative\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m mot\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     mot \u001b[39m=\u001b[39m signes[n \u001b[39m%\u001b[39;49m b] \u001b[39m+\u001b[39;49m decTob_iterative(n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb, b)\n",
+      "Cell \u001b[0;32mIn [50], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mprint\u001b[39m(decTob(\u001b[39m77\u001b[39m, \u001b[39m2\u001b[39m))\n\u001b[0;32m----> 2\u001b[0m \u001b[39mprint\u001b[39m(decTob_recursive(\u001b[39m77\u001b[39m, \u001b[39m2\u001b[39m))\n",
+      "Cell \u001b[0;32mIn [49], line 8\u001b[0m, in \u001b[0;36mdecTob_recursive\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m mot\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     mot \u001b[39m=\u001b[39m signes[n \u001b[39m%\u001b[39m b] \u001b[39m+\u001b[39m decTob_recursive(n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb, b) \u001b[39m+\u001b[39m mot\n",
+      "Cell \u001b[0;32mIn [49], line 8\u001b[0m, in \u001b[0;36mdecTob_recursive\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m mot\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     mot \u001b[39m=\u001b[39m signes[n \u001b[39m%\u001b[39m b] \u001b[39m+\u001b[39m decTob_recursive(n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb, b) \u001b[39m+\u001b[39m mot\n",
+      "    \u001b[0;31m[... skipping similar frames: decTob_recursive at line 8 (3 times)]\u001b[0m\n",
+      "Cell \u001b[0;32mIn [49], line 8\u001b[0m, in \u001b[0;36mdecTob_recursive\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m mot\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     mot \u001b[39m=\u001b[39m signes[n \u001b[39m%\u001b[39;49m b] \u001b[39m+\u001b[39;49m decTob_recursive(n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb, b) \u001b[39m+\u001b[39m mot\n",
       "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"NoneType\") to str"
      ]
     }
    ],
    "source": [
-    "decTob(77, 2)\n",
-    "decTob_iterative(77, 2)"
+    "print(decTob(77, 2))\n",
+    "print(decTob_recursive(77, 2))"
    ]
   },
   {
@@ -771,10 +778,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factoriel(n):\n",
+    "    fact = 1\n",
+    "    for i in range(n):\n",
+    "        fact *= i+1\n",
+    "    return fact"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def factoriel_recursive(n):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factoriel(5)"
+   ]
   },
   {
    "cell_type": "markdown",
